[package]
name           = "libtombala"
version        = "2.3.1"
authors        = ["nikos <nikos@mugsoft.io>"]
edition        = "2018"
description    = "Mugsoft Tombala Game"
repository     = "https://github.com/nikosefthias/libtombala"
license        = "MIT"
[dependencies]
rand           = "0.8.4"
serde          = { version = "1.0.126", features = ["derive"] }
serde_json     = "1.0.64"
