[package]
name           = "libtombala"
version        = "3.1.1"
authors        = ["nikos <nikos@mugsoft.io>"]
edition        = "2018"
description    = "Mugsoft Tombala Game"
repository     = "https://github.com/nikosefthias/libtombala"
license        = "MIT"
[dependencies]
fastrand = { version = "2.0.0", optional = true }
serde          = { version = "1.0.126", features = ["derive"]}
thiserror = "1.0.49"

[features]
default = []
card_generator = ["fastrand"]
