[package]
name           = "libtombala"
version        = "3.2.1"
authors        = ["nikos <nikos@mugsoft.io>"]
edition        = "2018"
description    = "Mugsoft Tombala Game"
repository     = "https://github.com/nikosefthias/libtombala"
license        = "MIT"
[dependencies]
fastrand = { version = "2.0.2", optional = true }
serde          = { version = "1.0.197", features = ["derive"]}
thiserror = "1.0.58"

[features]
default = []
card_generator = ["fastrand"]
